<resources>
    <string name="app_name">MeetFurryApplication</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="sign_up_text">Don\'t have an account yet?</string>
    <string name="sign_up"><u>SignUp</u></string>
    <string name="signup">Sign Up</string>
    <string name="pet_lover">Pet Lover</string>
    <string name="animal_shelter">Animal Shelter</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="logo">Logo</string>
    <string name="login_to_meetfurry">Login to MeetFurry</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="forumLogo">logo</string>
    <string name="addthread">AddThread</string>
    <string name="home">Home</string>
    <string name="forum">Forum</string>
    <string name="add_post">Add Post</string>
    <string name="enter_your_caption">Enter your caption here...</string>
    <string name="back"> Back </string>
    <string name="post">Post</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="Date">28/5/2021</string>
    <string name="caption">Caption</string>
    <string name="_0_likes">0 likes</string>
    <string name="postimage">postImage</string>

    <string name="name">Name</string>
    <string name="your_profile">YOUR PROFILE</string>
    <string name="go_to_forum">Go to forum</string>
    <string name="fullName">Full Name     :</string>
    <string name="email_address">Email address :</string>
    <string name="contactNumber">Contact Number:</string>
    <string name="Address">Address       :</string>
    <string name="UserName">Username      :</string>
    <string name="emailadd">emailAdd</string>
    <string name="contactNo">Contact Number</string>
    <string name="add_comment">ADD COMMENT</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="textview">TextView</string>

    <string name="reset_password">Reset Password</string>
    <string name="provide_email">Please provide us your email, we will sent you the link to reset your password :D</string>
    <string name="animal_shelter_sign_up">Animal Shelter Sign Up</string>
    <string name="loading">Loading.....</string>
    <string name="breed">breed</string>
    <string name="petname">petName</string>
    <string name="petgender">Gender</string>
    <string name="petimage">PetImage</string>
    <string name="petbreed">Breed</string>
    <string name="petage">Age</string>
    <string name="color">Color</string>
    <string name="pet_intake_date">Pet Intake Date</string>
    <string name="description"> Description</string>
    <string name="age">Age</string>
    <string name="update_details">Update Details</string>
    <string name="mark_as_adopted">Mark As Adopted</string>
    <string name="chat_with_shelter">Chat with Shelter</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_out"><u>Log out</u></string>
    <string name="filter">Filter</string>


</resources>