<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">


    <ImageButton
        android:id="@+id/btnBackToStartingPage3"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="353dp"
        android:backgroundTint="@color/white"
        android:contentDescription="back"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="353dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="234dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="490dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/meetfurrylogo" />

    <TextView
        android:id="@+id/txtWelcomeText"
        android:layout_width="352dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:text="@string/provide_email"
        android:textColor="#575656"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rp_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/rp_email"
        android:layout_width="333dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/Username"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcomeText"
        tools:ignore="TextFields"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="248dp"
        android:layout_height="47dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/btn_rectangle"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="#F9924E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rp_email" />

    <ProgressBar
        android:id="@+id/progressBar_ForgotPassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="62dp"
        android:layout_height="59dp"
        android:progressTint="@android:color/holo_orange_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword"
        app:layout_constraintVertical_bias="0.304" />



</androidx.constraintlayout.widget.ConstraintLayout>