<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingPage">




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="332dp"
        android:layout_height="192dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="65dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/meetfurrylogo"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="65dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginNavigate"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_rectangle"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUpNavigate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="UsingOnClickInXml"
        android:layout_marginLeft="156dp"
        android:layout_marginRight="161dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUpNavigate"
        android:layout_width="183dp"
        android:layout_height="49dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:layout_marginBottom="249dp"
        android:background="@drawable/btn_rectangle"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginNavigate"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>